clusters/ai-hub/traefik-config-ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: traefik.ai-hub.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.ai-hub.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.ai-hub.nwlnexus.net`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
